--- a/contents/0815.md
+++ b/contents/0815.md
@@ -10,7 +10,7 @@ Nos meus olhos, eles são **não mais que** um **cofre** de **ouro**. São **só
 
 **Desde muito tempo atrás**, **paro** ver-os os meus amigos. Então, paro também **compartilhar**-lhes os meus **semtimentos** verdadeiros. **Deixe**-me dizer-lhe, vou **procurar** um amigo (ou uma amiga), quem é absolutamente **fiel**, então compartilho-lhe todo **cerca de** mim!
 
-Os meus parentes mais velhos **avisam**-me nesta **coisa**. Mas quem quer escutá-los?
+Os meus parentes mais velhos **avisam**-me nesta **coisa**. Mas quem quer escutá-los? **Vários** dias atrás, o meu avô compartilhou-me uma história triste cerca da sua mãe. Naquela **ocasião**, ele chorou. Vendo tal cena, eu **decorei** a minha cara **como se** também estou triste; mas deixe-me dizer-lhe - isso não é mais do que uma expressão falsa e diplomática!
 
 **E no caso** se você me **pergunta**, o que vou fazer se **me arrependo** mais **tarde**? Se sim, vou **ler** a *Bíblia*. Vou **arrependo-me**. Arrependo-me a quem?
 
