--- a/contents/0818.md
+++ b/contents/0818.md
@@ -8,6 +8,6 @@ O Acusticopíteco gosta da **medicina**, e estuda bem no **secundário**. A sua 
 
 ## Parte II
 
-O Eucalipto ou Eucalipto-**Jovem** (das **componentes** do seu nome (chinês), qual são **semelhantes** à **palavra** « eucalipto » em chinês e « jovem » em inglês, **respetivamente**) é um aluno antigo da minha escola secundária. Ele é alto e magro, e tem a pele morena (mas não é negro -- é **asiático**). Ele assemelha-se a um **coala** ou ao Stitch (um carácter no cartoon).
+O Eucalipto, Eucalipto-**Jovem** ou Eucalipto Ião (das **componentes** do seu nome (chinês), qual são **semelhantes** à **palavra** « eucalipto » em chinês e « jovem » em inglês, **respetivamente**) é um aluno antigo da minha escola secundária. Ele é alto e magro, e tem a pele morena (mas não é negro -- é **asiático**). Ele assemelha-se a um **coala** ou ao Stitch (um carácter no cartoon).
 
 O Eucalipto estuda também bem, e é admitido também por uma universidade **célebre** no país.
