--- a/contents/0818.md
+++ b/contents/0818.md
@@ -2,12 +2,12 @@
 
 ## Parte I
 
-O Acusticopíteco \[ de **grego** (**moderno**) ακουστικό _akoustikó_ « **fone**, **auscultador** » ( literalmente « acústico » ) e (grego antigo ou moderno) πίθηκος _píthekos_ « **macaco** »; **literalmente** « macaco aos auscultadores » ] é um colega antigo meu. Fomos colegas presentes mais de dois anos atrás. Ele é gordo, e usa auscultadores **sempre que** é **livre**, como se quer não **se aproximar** da **Natureza**. É inteligente e esperto, mais é também chato para muitos de nós, porque **achamo**-lo hipócrita -- ele ama sempre dizer que não é bom em algo, qual É bom. **Por esta razão**, eu não lhe gosto.
+O Acusticopíteco \[ em inglês _Acousticopithecus_; etimologicamente de **grego** (**moderno**) ακουστικό _akoustikó_ « **fone**, **auscultador** » ( literalmente « acústico » ) e (grego antigo ou moderno) πίθηκος _píthekos_ « **macaco** »; **literalmente** « macaco aos auscultadores » ] é um colega antigo meu. Fomos colegas presentes mais de dois anos atrás. Ele é gordo, e usa auscultadores **sempre que** é **livre**, como se quer não **se aproximar** da **Natureza**. É inteligente e esperto, mais é também chato para muitos de nós, porque **achamo**-lo hipócrita -- ele ama sempre dizer que não é bom em algo, qual É bom. **Por esta razão**, eu não lhe gosto.
 
 O Acusticopíteco gosta da **medicina**, e estuda bem no **secundário**. A sua **vontade**, ele é **admitido** por o **colégio** de medicina duma universidade famosa no país.
 
 ## Parte II
 
-O Eucalipto, Eucalipto-**Jovem** ou Eucalipto Ião (das **componentes** do seu nome (chinês), qual são **semelhantes** à **palavra** « eucalipto » em chinês e « jovem » em inglês, **respetivamente**) é um aluno antigo da minha escola secundária. Ele é alto e magro, e tem a pele morena (mas não é negro -- é **asiático**). Ele assemelha-se a um **coala** ou ao Stitch (um carácter em cartoon).
+O Eucalipto, Eucalipto-**Jovem** ou Eucalipto Ião (em inglês _Eucalyptus_ ou _Eucalyptus Young_; etimologicamente das **componentes** do seu nome (chinês), qual são **semelhantes** à **palavra** « eucalipto » em chinês e « jovem » em inglês, **respetivamente**) é um aluno antigo da minha escola secundária. Ele é alto e magro, e tem a pele morena (mas não é negro -- é **asiático**). Ele assemelha-se a um **coala** ou ao Stitch (um carácter em cartoon).
 
 O Eucalipto estuda também bem, e é admitido também por uma universidade **célebre** no país.
